# RJCP.DLL.SerialPortStream

./: .editorconfig  .gitignore  BUILD.md  CHANGES.md  Changes.txt  LICENSE  LICENSE.md  Local.testsettings  README.Debian.md  README.md  SerialPortStream-net40.sln  SerialPortStream-net45.sln  SerialPortStream-netstandard15.sln  SerialPortStream.nuspec  SerialPortStream.sln  SerialPortStream.sln.GhostDoc.user.dic  SerialPortStream.vsmdi  TraceAndTestImpact.testsettings  build.bat  global.json
code/: .editorconfig  GlobalSuppressions.cs  HandShake.cs  ISerialPortStream.cs  ISerialPortStreamFactory.cs  InternalApplicationException.cs  LocalAsyncResult.cs  Log.cs  NativeSerialPort.cs  NativeSerialPort_CommModemStatus.cs  NativeSerialPort_CommOverlappedIo.cs  NativeSerialPort_CommProperties.cs  NativeSerialPort_CommState.cs  NativeSerialPort_Win32.cs  NativeSerialPort_WinError.cs  Parity.cs  PortDescription.cs  SerialData.cs  SerialDataEventArgs.cs  SerialError.cs  SerialErrorReceivedEventArgs.cs  SerialPinChange.cs  SerialPinChangedEventArgs.cs  SerialPortStream-net40.csproj  SerialPortStream-net45.csproj  SerialPortStream-netstandard15.csproj  SerialPortStream.NativeSerialPort.CommModemStatus.cs  SerialPortStream.NativeSerialPort.CommOverlappedIo.cs  SerialPortStream.NativeSerialPort.CommProperties.cs  SerialPortStream.NativeSerialPort.CommState.cs  SerialPortStream.NativeSerialPort.cs  SerialPortStream.SerialTrace.cs  SerialPortStream.T.cs  SerialPortStream.WinError.cs  SerialPortStream.cs  SerialPortStream.csproj  SerialPortStream.nuspec  SerialPortStream.snk  SerialPortStreamFactory.cs  SerialPortTypes.cs  (+4 more)
code/..svnbridge/: .svnbridge  NativeSerialPort_CommModemStatus.cs
code/Datastructures/: CircularBuffer.cs  LocalAsyncResult.cs  ReusableList.cs  TimerExpiry.cs
code/Native/: INativeSerial.cs  INativeSerialDll.cs  IReadChars.cs  ISerialBufferSerialData.cs  ISerialBufferStreamData.cs  NativeMethods.cs  Platform.cs  ReadToCache.cs  SafeNativeMethods.cs  SerialBuffer.cs  SerialReadBuffer.cs  SerialWriteBuffer.cs  UnixNativeSerial.cs  UnsafeNativeMethods.cs  WinNativeSerial.cs
code/Properties/: AssemblyInfo.cs
code/Serial/: INativeSerial.T.cs  INativeSerial.cs  IReadChars.cs  ISerialReadBuffer.cs  ISerialWriteBuffer.cs  IWinNativeSettings.cs  Platform.cs  SerialBuffer.cs  SerialBufferEventArgs.cs  SerialReadBuffer.cs  SerialWriteBuffer.cs  UnixNativeSerial.cs  WinNativeSerial.cs
code/System/: EntryPointNotFoundException.cs
code/Trace/: LineSplitter.cs  Log.cs  LogSource.cs  LogSourceFactory.cs  LoggerTraceListener.cs
code/netstandard/: netstandard.csproj  project.json  readme.md
distribute-src/nuget/: SerialPortStream.nuspec
dll/docker/: Dockerfile  README.md  libnserial-build.sh
dll/serialunix/: BUILD  BUILD.md  CMakeLists.txt  README.cmake  README.cmake.md  README.cygwin  README.cygwin.md  README.linux  README.linux.md  TODO  build.sh
dll/serialunix/CMakeModules/: doxygen.cmake  serial.cmake  types.cmake
dll/serialunix/debian/: changelog  control  copyright  libnserial-dev.install  libnserial-doc.install  libnserial-doc.lintian-overrides  libnserial.docs  libnserial.lintian-overrides  libnserial.manpages  rules  shlibs.local  source.lintian-overrides
dll/serialunix/debian/docs/: libnserial.3
dll/serialunix/debian/source/: options
dll/serialunix/libnserial/: CMakeLists.txt  NOTES.bug-serialportclose.md  NOTES.bug-serialportclose.txt  basic.c  baudrate.c  baudrate.h  break.c  config.h.in  doxyfile.in  errmsg.c  errmsg.h  events.c  flush.c  flush.h  log.c  log.h  lowlevel.c  modem.c  modem.h  netfx.c  netfx.h  nserial.c  nserial.h  nserialConfig.cmake.in  nserialConfigVersion.cmake.in  openserial.c  openserial.h  portlinux.c  portnone.c  properties.c  serialhandle.h  stringbuf.c  stringbuf.h  threaddata.c  threaddata.h  types.h
dll/serialunix/libnserial/comptest/: BuffDump.cpp  BuffDump.hpp  Buffer.cpp  Buffer.hpp  CMakeLists.txt  ListPortTest.cpp  PrintError.hpp  README  SerialConfiguration.cpp  SerialConfiguration.hpp  SerialModemEvents.cpp  SerialModemSignalsTest.cpp  SerialParityTest.cpp  SerialReadWrite.cpp  SerialReadWrite.hpp  SerialSendReceiveTest.cpp  icount.c  kernelbug.c  main.cpp  main.hpp
dll/serialunix/libnserial/unittest/: CMakeLists.txt  configuration.cpp  configuration.hpp  main.cpp  main.hpp  serialerror.cpp  serialinit.cpp  serialmodem.cpp  serialopen.cpp
netstandard/: netstandard.xproj  project.json  readme.md
nuget/: SerialPortStream.1.1.2.0-r1.nupkg  SerialPortStream.1.1.2.0.nupkg  SerialPortStream.1.1.3.0.nupkg  SerialPortStream.1.1.3.0.symbols.nupkg  SerialPortStream.1.1.4.0.nupkg  SerialPortStream.1.1.4.0.symbols.nupkg  SerialPortStream.nuspec
test/: README.md
test/BufferBytesTest/: App.config  BufferBytesTest.csproj  CommandOptions.cs  Program.cs
test/Common/: SerialConfiguration.cs
test/DatastructuresTest/: CircularBufferTest.cs  DatastructuresTest-net40.csproj  DatastructuresTest-net45.csproj  DatastructuresTest.csproj  GlobalSuppressions.cs  TimerExpiryTest.cs  packages.DatastructuresTest-net40.config  packages.DatastructuresTest-net45.config
test/SerialPortStream.Virtual/: README.md  SerialPortStream.Virtual.csproj
test/SerialPortStream.VirtualTest/: GlobalSuppressions.cs  SerialPortStream.VirtualTest.Legacy.csproj  SerialPortStream.VirtualTest.csproj
test/SerialPortStreamManualTest/: App.config  DisconnectDeviceTest.cs  GlobalSuppressions.cs  SerialPortStreamManualTest.csproj
test/SerialPortStreamNativeTest/: CloseWhileBlockedTest.cs  GlobalSuppressions.cs  ParityTest.cs  ReadCharTest.cs  ReceiveTransmitTest.cs  SerialPortReceive.cs  SerialPortStreamLoggerTest.cs  SerialPortStreamNativeTest.csproj  SerialPortStreamTest.cs
test/SerialPortStreamTest/: App.config  FrameworkBugs.cs  GlobalSuppressions.cs  MonoBugs.cs  MsdnFrameworkTest.cs  ReadCharsTest.cs  ReadToTest.cs  ReadWithThrowOnError.cs  ReadWriteBytesTest.cs  SerialConfiguration.cs  SerialPortReceive.cs  SerialPortStreamCharTest.cs  SerialPortStreamDriverTest.cs  SerialPortStreamFactoryTest.cs  SerialPortStreamLoggerTest.cs  SerialUnixTest.cs  (+12 more)
(+86 files in other folders)
